<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rolltop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="8dp"
    	android:focusable="true"
		android:focusableInTouchMode="true" 
		tools:context=".MainActivity$RollFragment" >

        <TextView
            android:id="@+id/label_sides"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/label_sides" />
        <EditText
            android:id="@+id/edit_sides"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:digits="0123456789"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="3" />
        <TextView
            android:id="@+id/label_rolls"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:hint="@string/label_rolls" />
        <TextView
            android:id="@+id/rolls"
            android:textSize="18sp"
            android:textColor="#FFCF0000"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/norolls" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="#AAAAAAAA" />
    <TextView
        android:id="@+id/dicename"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:minWidth="150dp" />
    <RelativeLayout
        android:id="@+id/keypad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_margin="10dp" />

</LinearLayout>
